[package]
name = "rs-jester"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
clap = "4.5.53"
fnv = "1.0.7"
lazy_static = "1.5.0"
log = "0.4.29"
pingora = "0.6.0"
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-proxy = "0.6.0"
prometheus = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.19.0", features = ["v4"]}
